# wave-simmers

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: gen.rs  main.rs  shader.wgsl  sim.rs  simulation.rs  texture.rs  vis.rs
