[package]
name = "wave-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.0"
winit = {version = "0.29.0", features = [ "rwh_05" ]}
pollster = {version = "0.3.0", features = [ "macro" ]}
log = "0.4.0"
env_logger = "0.11.0"
image = "0.24.0"
anyhow = "1.0.79"
bytemuck = {version = "1.14.0", features = [ "derive" ]}
clap = { version = "4.4.0", features = [ "derive" ] }
